# haskell

./: .gitignore  220801classroom.hs  220803classroom.hs  220805classroom.hs  220808classroom.hs  220810classroom.hs  220812classroom.hs  220815classroom.hs  220829classroom.hs  220831classroom.hs  220905classroom.hs  220907classroom.hs  220912classroom.hs  220919classroom.hs  220930classroom.hs  221005classroom.hs  221007classroom.hs  221010classroom.hs  README.md
Task/: 220801 - task S01.hs  220801task.hs  220803 - task S02.hs  220803 - task S03.hs  220810 - task S05.hs  220812 - task S06.hs  220815 - task S07.hs  220822 - task S08.hs  220829 - task S09.hs  220831 - task S10.hs  220909 - task S11.hs  220919 - task S12.hs  listuserpass.txt
cabal_project/: cabal-project.cabal
cabal_project/app/: Main.hs  State.hs
cabal_project/src/: Draw.hs
haskell_api/: CHANGELOG.md  haskell-api.cabal
haskell_api/app/: Main.hs
haskell_spockdb/: CHANGELOG.md  haskell-spockdb.cabal
haskell_spockdb/app/: Main.hs
haskell_web/: CHANGELOG.md  haskell-web.cabal
haskell_web/app/: Main.hs
haskell_webdb/: CHANGELOG.md  api.db-shm  api.db-wal  haskell-webdb.cabal
haskell_webdb/app/: Main.hs
