cabal-version:      2.4
name:               cabal-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kulombok
maintainer:         wh.code.journey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cabal-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  State
                    Draw

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    
    hs-source-dirs:   app
                      src
    
    default-language: Haskell2010
